--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,24 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import missingno as msno\n",
     "import numpy as np\n",
-    "import folium as fl\n",
-    "import geopandas as gpd\n",
     "\n",
     "plt.style.use('dark_background')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +47,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('cleaned.csv', parse_dates=['datetime']).set_index('datetime')\n",
+    "df = pd.read_csv('output_data/cleaned.csv', parse_dates=['datetime']).set_index('datetime')\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +84,7 @@
     }
    ],
    "source": [
-    "df_interp = pd.read_csv('cleaned_interp.csv', parse_dates=['datetime']).set_index('datetime')\n",
+    "df_interp = pd.read_csv('output_data/cleaned_interp.csv', parse_dates=['datetime']).set_index('datetime')\n",
     "df_interp.info()"
    ]
   },
@@ -653,33 +650,6 @@
    "source": [
     "correlation_scatter(df_interp, 'PM2.5', 'PM10')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#station_geo = pd.read_csv('latlong.csv')\n",
-    "#map_center = [39.9042, 116.4074]\n",
-    "#beijing_map = fl.Map(location=map_center)\n",
-    "#\n",
-    "#for _, row in station_geo.iterrows():\n",
-    "#    fl.Marker(\n",
-    "#        location=[row['Latitude'], row['Longitude']],\n",
-    "#        popup=row['Station'],\n",
-    "#        icon=fl.Icon(color='blue', icon='info-sign')\n",
-    "#    ).add_to(beijing_map)\n",
-    "#\n",
-    "#beijing_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
