--- a/feature_eng.ipynb
+++ b/feature_eng.ipynb
@@ -2,29 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "#df = pd.read_csv('cleaned.csv', parse_dates=['datetime'])\n",
-    "df_interp = pd.read_csv('cleaned_interp.csv', parse_dates=['datetime'])\n",
+    "df_interp = pd.read_csv('output_data/cleaned_interp.csv', parse_dates=['datetime'])\n",
     "pollutants = ['PM2.5', 'PM10', 'SO2', 'NO2', 'CO', 'O3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,25 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['datetime', 'PM2.5', 'PM10', 'SO2', 'NO2', 'CO', 'O3', 'TEMP', 'PRES',\n",
-       "       'DEWP', 'RAIN', 'WSPM', 'station_id', 'PM2.5_lag1', 'PM2.5_lag2',\n",
-       "       'PM2.5_lag3', 'PM10_lag1', 'PM10_lag2', 'PM10_lag3', 'SO2_lag1',\n",
-       "       'SO2_lag2', 'SO2_lag3', 'NO2_lag1', 'NO2_lag2', 'NO2_lag3', 'CO_lag1',\n",
-       "       'CO_lag2', 'CO_lag3', 'O3_lag1', 'O3_lag2', 'O3_lag3',\n",
-       "       'PM2.5_rolling_6h', 'PM10_rolling_6h', 'SO2_rolling_6h',\n",
-       "       'NO2_rolling_6h', 'CO_rolling_6h', 'O3_rolling_6h', 'hour', 'dayofweek',\n",
-       "       'month', 'weekend', 'PM2.5_target', 'PM10_target', 'SO2_target',\n",
-       "       'NO2_target', 'CO_target', 'O3_target', 'day', 'year'],\n",
+       "       'DEWP', 'RAIN', 'WSPM', 'station_id'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,146 +126,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_pollutant_X_y(pollutant, df):\n",
-    "    X = df[[f'{pollutant}', f'{pollutant}_lag1', f'{pollutant}_lag2', f'{pollutant}_lag3', f'{pollutant}_rolling_6h', 'hour', 'day', 'weekend', 'month', 'year', 'TEMP', 'PRES', 'DEWP', 'WSPM']]\n",
-    "    y = df[f'{pollutant}_target']\n",
-    "\n",
-    "    return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "\n",
-    "tscv = TimeSeriesSplit(\n",
-    "    n_splits=5,\n",
-    "    gap=48,\n",
-    "    test_size=5000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CO</th>\n",
-       "      <th>CO_target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>400.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>400.0</td>\n",
-       "      <td>400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420762</th>\n",
-       "      <td>300.0</td>\n",
-       "      <td>400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420763</th>\n",
-       "      <td>400.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420764</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420765</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420766</th>\n",
-       "      <td>400.0</td>\n",
-       "      <td>600.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>420696 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           CO  CO_target\n",
-       "5       400.0      500.0\n",
-       "6       500.0      500.0\n",
-       "7       500.0      500.0\n",
-       "8       500.0      400.0\n",
-       "9       400.0      400.0\n",
-       "...       ...        ...\n",
-       "420762  300.0      400.0\n",
-       "420763  400.0      500.0\n",
-       "420764  500.0      500.0\n",
-       "420765  500.0      400.0\n",
-       "420766  400.0      600.0\n",
-       "\n",
-       "[420696 rows x 2 columns]"
+       "Index(['datetime', 'PM2.5', 'PM10', 'SO2', 'NO2', 'CO', 'O3', 'TEMP', 'PRES',\n",
+       "       'DEWP', 'RAIN', 'WSPM', 'station_id', 'PM2.5_lag1', 'PM2.5_lag2',\n",
+       "       'PM2.5_lag3', 'PM10_lag1', 'PM10_lag2', 'PM10_lag3', 'SO2_lag1',\n",
+       "       'SO2_lag2', 'SO2_lag3', 'NO2_lag1', 'NO2_lag2', 'NO2_lag3', 'CO_lag1',\n",
+       "       'CO_lag2', 'CO_lag3', 'O3_lag1', 'O3_lag2', 'O3_lag3',\n",
+       "       'PM2.5_rolling_6h', 'PM10_rolling_6h', 'SO2_rolling_6h',\n",
+       "       'NO2_rolling_6h', 'CO_rolling_6h', 'O3_rolling_6h', 'hour', 'dayofweek',\n",
+       "       'day', 'year', 'month', 'weekend', 'PM2.5_target', 'PM10_target',\n",
+       "       'SO2_target', 'NO2_target', 'CO_target', 'O3_target'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_interp[['CO', 'CO_target']]"
+    "df_interp.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_interp.to_csv('output_data/modeling_data.csv', columns=df_interp.columns)"
    ]
   },
   {
